Changed the loader to show infinitely

--- a/css/bookLoader.css
+++ b/css/bookLoader.css
@@ -29,3 +29,9 @@ img {
         transform: rotate(360deg);
     }
 }
+
+@media screen and (max-width: 500px) {
+    body {
+        font-size: 13px;
+    }
+}
